<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="40dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-110dp"
            android:layout_marginBottom="-110dp"
            android:scaleX=".6"
            android:scaleY=".6"
            android:src="@drawable/recuperame"
            android:transitionName="logo_trans" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto01"
        android:textColor="@color/verde_23"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint01"
            app:boxStrokeColor="@color/morado_26"
            app:hintTextColor="@color/morado_26">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint02"
            app:boxStrokeColor="@color/morado_26"
            app:hintTextColor="@color/morado_26"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOlvidar"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:text="@string/boton02"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@color/gris_5e"
            android:layout_gravity="end"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/morado_56"
            android:text="@string/boton01"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="30dp"
            android:text="@string/boton03"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/azul_09"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</ScrollView>