<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/white"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/recuperame"
            android:scaleX=".4"
            android:scaleY=".4"
            android:layout_marginTop="-110dp"
            android:layout_marginBottom="-110dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint03"
            app:boxStrokeColor="@color/morado_26"
            app:hintTextColor="@color/morado_26">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint04"
            app:boxStrokeColor="@color/morado_26"
            app:hintTextColor="@color/morado_26">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint05"
            app:boxStrokeColor="@color/morado_26"
            app:hintTextColor="@color/morado_26">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint01"
            app:boxStrokeColor="@color/morado_26"
            app:hintTextColor="@color/morado_26"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint02"
            app:boxStrokeColor="@color/morado_26"
            app:hintTextColor="@color/morado_26"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton04"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/morado_56"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYaEstoyRegistrado"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="30dp"
            android:text="@string/boton05"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@color/azul_09"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</ScrollView>